--- a/Multi_Agent_Biosurveillance_System.ipynb
+++ b/Multi_Agent_Biosurveillance_System.ipynb
@@ -27,7 +27,7 @@
       "cell_type": "markdown",
       "source": [
         "**This is the Agent Intensive - Capstone Project            (Kaggle x Google):**\n",
-        "I have applied the Kaggle × Google 5-Days Agents Intensive Course learnings to develop this system with GoogleADK.\n",
+        "I have applied the Kaggle × Google 5-Day Agents Intensive Course learnings to develop this system with GoogleADK.\n",
         "\n",
         "It contains all the essential code required to run and explore the **Multi-Agent Biosurveillance System**, including demonstrations of the agents.\n",
         "\n",
